# practicaFrontEnd

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  bun.lockb  docker-compose.yml  index.html  install.sh  package-lock.json  package.json  pyproject.toml  vite.config.ts
client/: App.tsx  Doctors.tsx  main.css  main.tsx
client/components/: Menu.tsx  ProtectedRoute.tsx  addDoctorForms.tsx  addPatientForm.tsx  addUserForms.tsx  deleteDoctor.tsx  editDoctor.tsx  editPatient.tsx  listDoctors.tsx  listPatients.tsx  searchDoctors.tsx
client/pages/: AboutUs.tsx  Home.tsx  Login.tsx  Menu.tsx  Protected.tsx  UserInfo.tsx
client/pages/protected/: Doctors.tsx  Pacients.tsx  UserInfo.tsx  listDoctors.tsx  listPatients.tsx  searchPatinents.tsx
client/utils/: auth.ts  types.ts
server/: .env  api.py  db.py  env.py  main.py  model.py  storage.py  test_api.py  test_db.py  test_storage.py  test_users.py  users.py
